index.html changed

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 
     <!--   *********************************************************************************-->
 
-          <section id="title">
+    <section id="cover">
       <div id="cover-caption">
           <div class ="container">
               <div class="col-md-10 col-md-offset-1">    
-                   <h1 class="display-2"> Scavenger Hunt </h1>
+                   <h1>Scavenger</h1>
+                   <h2> Hunt </h2>
                     <p> Enter your answer here for direction</p>
                     <p2 id = "questions"> </p2>
                     <form action="#" class="form-inline">
@@ -25,7 +26,7 @@
                           <label class="sr-only">Name</label>
                             <input type = "text" id= "answer" class ="form-control form-control-lg" placeholder = "Enter here">
                       </div>
-                  <button type="reset" id="MyButton" class="btn btn-secondary btn-lg" style="background-color: #778899;">Submit</button>
+                  <button type="submit" id="MyButton" class="btn btn-secondary btn-lg" style="background-color: #778899;">Submit</button>
                     </form>
                     </div>
               </div>
@@ -46,8 +47,15 @@
   </head>
 
   <body>
-   <div id="map-canvas"></div> 
-
+    <section id = "map-canvas">
+      <div id="cover-caption">
+        <div class="section-content"> 
+          <div class="container">
+            
+            </div>
+         </div>
+      </div> 
+    </section>
 
 
 
