--- a/index.html
+++ b/index.html
@@ -47,13 +47,6 @@
   
   <body>
     <div id = "map-canvas">
-    <!--  <div id="cover-caption">
-        <div class="section-content"> 
-          <div class="container">
-            
-            </div> 
-         </div>
-      </div> -->
     </div>
  </body>
 
@@ -84,11 +77,12 @@
           document.getElementById("questions").innerHTML = question[counter2];
           $('#MyButton').on('click', function () {
               var check=document.getElementById("answer");
-                if((check.value==answers[counter]))
+                if((check.value.toLowerCase()==answers[counter]))
                 {
                               var marker = new google.maps.Marker({
                                         position: coordinates[counter1],
                                         map: map,
+                                        title: "Starting Point"
                                   });
                               counter++;
                               counter1++;
