--- a/check.html
+++ b/check.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      #map {
-        width: 500px;
-        height: 400px;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="map"></div>
-    <script>
-      function initMap() {
-        var mapDiv = document.getElementById('map');
-        var map = new google.maps.Map(mapDiv, {
-          center: {lat: 44.540, lng: -78.546},
-          zoom: 8
+    <title>Geolocation</title>
+    <div>
+          <div id ="geoLocation">GeoLocation</div>
+          <button id= "getGeoLocation"> get GeoLocation</button>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdOvELcgHNHajAFjB23KZ5AjRTUr9yuN0"
+    async defer></script>
+    <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+   <script>
+   
+var x = document.getElementById("geoLocation");
+function getLocation() {
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(showPosition);
+    } else {
+        x.innerHTML = "Geolocation is not supported by this browser.";
+    }
+}
+function showPosition(position) {
+    x.innerHTML = "Latitude: " + position.coords.latitude + 
+    "<br>Longitude: " + position.coords.longitude; 
+}
+$('#getGeoLocation').on('click', function () {
+          getLocation();
         });
-      }
-    </script>
-    <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
-        async defer></script>
+</script>
+        
   </body>
 </html>
